--- a/index.html
+++ b/index.html
@@ -3,12 +3,32 @@
 <head>
 	<meta charset="utf-8">
 	<title>Practice 4</title>
+
+	<!-- This Fonts are from https://web-fonts.ge/bpg-banner/ -->
+
+	<!-- <link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-nino-mtavruli/css/bpg-nino-mtavruli.min.css"> -->
+
+	<link rel="stylesheet" href="https://cdn.web-fonts.ge/fonts/bpg-banner/css/bpg-banner.min.css">
+
+	<!-- -------------------------------- -->
+
+
+
+	<!-- This is Google Fonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+	<!-- ------------------- -->
+
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
 <body>
-	<h1>This is first github repository</h1>
+	<h1>ეს არის გითჰაბის პირველი რეპოზიტორი</h1>
 	
-	<p> This is changed from Githib Web Site </p>
+	<p> ცვლილება მოხდა გითჰაბის საიტიდან </p>
+
+	<h2>This is Google Font</h2>
 </body>
 </html>
